--- a/src/main/resources/templates/layouts/layout-main-table.html
+++ b/src/main/resources/templates/layouts/layout-main-table.html
@@ -5,7 +5,7 @@
   <title>공통 메인 컨텐츠 (테이블형)</title>
 </head>
 <body>
-<main id="layout-main" class="content-wrapper">
+<main id="layout-main" class="content-wrapper accent-dark">
   <!-- Content Header (Page header) -->
   <div class="content-header">
     <div class="container-fluid">
@@ -24,7 +24,6 @@
   </div>
   <!-- /.content-header -->
 
-  <!--    <section id="main-section"></section>-->
   <section class="content">
     <div class="container-fluid">
       <div class="row">
@@ -40,9 +39,17 @@
             <!-- /.card-body -->
           </div>
           <!-- /.card -->
-          <div class="card col-6" id="layout-card-todolist"></div>
         </section>
-        <!-- /.col -->
+      </div>
+      <!-- /.row -->
+
+      <div class="row">
+        <section class="col-6 connectedSortable">
+          <div class="card" id="layout-card-todolist"></div>
+        </section>
+        <section class="col-6 connectedSortable">
+          <div class="card" id="layout-card-chat"></div>
+        </section>
       </div>
       <!-- /.row -->
     </div>
